Fix top bar's z-index

--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -7,7 +7,7 @@
   overflow : auto;
 }
 
-.top-basr.ui.menu.fixed {
+.top-bar.ui.menu.fixed {
   z-index : 120;
 }
 
